implement resourceImpl in headless and some additional changes
